--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,21 @@
 [project]
 name = "mvcluster"
-version = "0.1.0"
+version = "1.1"
 description = "A Python package for multiview unsupervised clustering"
-authors = [{name = "Ton Nom", email = "ton.email@exemple.com"}]
+authors = [{name = "Hamady GACKOU", email = "researcherdatascientist@gmail.com"}]
 readme = "README.md"
 license = {text = "MIT"}
 dependencies = ["numpy", "scikit-learn", "torch", "scipy"]
+keywords = ["multiview clustering", "unsupervised learning", "data science"]
+requires-python = ">=3.8"
+classifiers = [
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+]
 
 [build-system]
 requires = ["setuptools", "wheel"]
