--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,81 +3,86 @@ name: CI/CD Pipeline for mvcluster
 on:
   push:
     branches:
-      - test  # Déclenchement sur push vers la branche test
+      - test         # Pour les tests en push sur 'test'
+    tags:
+      - 'v*.*.*'     # Pour les releases (ex: v1.0.0)
   pull_request:
     branches:
-      - main  # Déclenchement sur pull request vers la branche principale (main)
+      - main         # Pour les PR vers la branche principale
 
 jobs:
-  # Job pour tester le code
   test:
     runs-on: ubuntu-latest
 
     steps:
-      # Étape 1: Checkout du code
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Étape 2: Installer Python
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'  # Choisis la version de Python appropriée
-
-      # Étape 3: Installer les dépendances
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
-
-      # Étape 4: Installer le package mvcluster en mode éditable
-      - name: Install mvcluster in editable mode
-        run: |
-          pip install -e .  # Installer le package mvcluster dans l'environnement d'exécution
-
-      # Étape 5: Exécuter les tests unitaires (si tu en as)
-      - name: Run tests
-        run: |
-          pytest  # Remplace par tes tests
-
-  # Job pour build et publier sur PyPI après le merge
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    needs: test  # Ce job s'exécute après le job de test
-
-    steps:
-      # Étape 1: Checkout du code
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Étape 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
 
-      # Étape 3: Installer les dépendances
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e  # Installer le package en mode éditable
-          python -m pip install build twine
+          pip install -r requirements.txt
+          pip install pytest flake8
 
-      # Étape 4: Ajouter le répertoire racine au PYTHONPATH
+      - name: Lint code
+        run: |
+          flake8 mvcluster tests
+
+      - name: Install mvcluster in editable mode
+        run: |
+          pip install -e .
+
+      - name: Run tests (if present)
+        run: |
+          if compgen -G "tests/test_*.py" > /dev/null; then
+            pytest tests/
+          else
+            echo "No tests found."
+          fi
+
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .
+          pip install build twine
+
       - name: Add project root to PYTHONPATH
         run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
 
-      # Étape 5: Construire les distributions
       - name: Build the package
         run: |
           python -m build
 
-      # Étape 6: Publier sur PyPI via Twine (seulement sur la branche principale)
       - name: Publish to PyPI
-        if: github.ref == 'refs/heads/main'  # Exécution uniquement sur la branche principale
         run: |
-          python -m twine upload dist/*  # Télécharge les distributions sur PyPI
+          python -m twine upload dist/*
         env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}  # API username de PyPI
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}  # API token de PyPI
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
