--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,8 @@ name: CI/CD Pipeline for mvcluster
 on:
   push:
     branches:
-      - test         # Pour les tests en push sur 'test'
+      - test         # Pour les tests en push sur 'test' ddev
+      - main         # Pour les push sur la branche principale
     tags:
       - 'v*.*.*'     # Pour les releases (ex: v1.0.0)
   pull_request:
