--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,8 +1,9 @@
-# Dépendances principales pour ton projet
-numpy==1.21.0
-scikit-learn>=0.24.0
-torch==1.9.0
-scipy==1.7.0
-
-# Dépendances pour les tests
-pytest==6.2.4
+torch>=1.9.0 # PyTorch for deep learning
+pytest>=6.2.4 # Testing framework
+numpy>=1.21 # Numerical computing
+scipy>=1.7 # Scientific computing
+scikit-learn>=1.0 # Machine learning
+tensorflow
+networkx>=2.6 # Graph processing
+matplotlib>=3.5 # Data visualization
+pandas>=1.3 # Data manipulation
