--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,49 +3,49 @@ name: CI/CD Pipeline for mvcluster
 on:
   push:
     branches:
-      - test         # Pour les tests en push sur 'test' fix
+      - test           # Tests sur les pushes vers 'test'
     tags:
-      - 'v*.*.*'     # Pour les releases (ex: v1.1)
+      - 'v*.*.*'       # Releases (ex : v1.2.3)
   pull_request:
     branches:
-      - main         # Pour les PR vers la branche principale
+      - main           # PR vers la branche principale
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.10']
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: ${{ matrix.python-version }}
 
       - name: Cache pip
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements/requirements.txt
           pip install pytest flake8
 
       - name: Lint code
-        run: |
-          flake8 mvcluster tests
+        run: flake8 mvcluster tests
 
       - name: Install mvcluster in editable mode
-        run: |
-          pip install -e .
+        run: pip install -e .
 
-      - name: Run tests (if present)
+      - name: Run tests if any
         run: |
           if compgen -G "tests/test_*.py" > /dev/null; then
             pytest tests/
@@ -54,31 +54,26 @@ jobs:
           fi
 
   build-and-deploy:
-    runs-on: ubuntu-latest
     needs: test
     if: startsWith(github.ref, 'refs/tags/v')
-
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '3.9'
 
-      - name: Install dependencies
+      - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e .
           pip install build twine
 
-      - name: Add project root to PYTHONPATH
-        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
-
       - name: Build the package
-        run: |
-          python -m build
+        run: python -m build
 
       - name: Publish to PyPI
         run: |
