--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,12 @@ jobs:
           pip install pytest flake8
 
       - name: Lint code
-        run: flake8 mvcluster tests
+        run: |
+          if [ -d "tests" ]; then
+            flake8 mvcluster tests
+          else
+            flake8 mvcluster
+          fi
 
       - name: Install mvcluster in editable mode
         run: pip install -e .
