--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,15 +2,13 @@ name: Publish Sphinx docs
 
 on:
   push:
-    branches:
-      - main     # déclenchement sur main
+    branches: [ main ]
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -19,7 +17,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
       - name: Build docs
@@ -27,11 +24,14 @@ jobs:
           cd docs
           .\make.bat html
 
+      - name: Disable Jekyll
+        run: |
+          cd docs/build/html
+          echo > .nojekyll
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/build/html
           publish_branch: gh-pages
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
