--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,5 @@
 # .github/workflows/docs.yml
+
 name: Publish Sphinx docs
 
 on:
@@ -10,28 +11,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout your repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      # 2. Setup Python
+      - name: Set up Python 3.x
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
+      # 3. Install Sphinx and your theme/extensions
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
-      - name: Build Sphinx documentation
-        # Appelle sphinx-build depuis la racine,
-        # sans jamais changer de dossier
-        run: sphinx-build -b html docs/source docs/build/html
+      # 4. Build the Sphinx docs
+      - name: Build documentation
+        working-directory: docs
+        run: sphinx-build -b html source build/html
 
+      # 5. Disable Jekyll so GitHub Pages serves your raw HTML
       - name: Disable Jekyll
-        # Empêche GitHub Pages d'appliquer Jekyll
-        run: touch docs/build/html/.nojekyll
+        working-directory: docs/build/html
+        run: touch .nojekyll
 
+      # 6. Publish to gh-pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
