--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,5 +1,4 @@
 # .github/workflows/docs.yml
-
 name: Publish Sphinx docs
 
 on:
@@ -21,26 +20,24 @@ jobs:
         with:
           python-version: '3.x'
 
-      # 3. Install Sphinx and your theme/extensions
+      # 3. Install Sphinx and extensions
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
-      # 4. Build the Sphinx docs
-      - name: Build documentation
-        working-directory: docs
-        run: sphinx-build -b html source build/html
+      # 4. Build the Sphinx docs from mvcluster/docs/source → mvcluster/docs/build/html
+      - name: Build Sphinx documentation
+        run: sphinx-build -b html mvcluster/docs/source mvcluster/docs/build/html
 
-      # 5. Disable Jekyll so GitHub Pages serves your raw HTML
+      # 5. Disable Jekyll so GitHub Pages serves raw HTML
       - name: Disable Jekyll
-        working-directory: docs/build/html
-        run: touch .nojekyll
+        run: touch mvcluster/docs/build/html/.nojekyll
 
-      # 6. Publish to gh-pages
+      # 6. Deploy to GitHub Pages (branch gh-pages)
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: docs/build/html
+          publish_dir: mvcluster/docs/build/html
