--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,33 +8,33 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      # 1. Checkout your repository
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # 1) Checkout
+      - uses: actions/checkout@v3
 
-      # 2. Setup Python
-      - name: Set up Python 3.x
+      # 2) Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      # 3. Install Sphinx and extensions
+      # 3) Install Sphinx
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
-      # 4. Build the Sphinx docs from mvcluster/docs/source → mvcluster/docs/build/html
+      # 4) Build la doc
       - name: Build Sphinx documentation
-        run: sphinx-build -b html mvcluster/docs/source mvcluster/docs/build/html
+        run: |
+          sphinx-build -b html mvcluster/docs/source mvcluster/docs/build/html
 
-      # 5. Disable Jekyll so GitHub Pages serves raw HTML
+      # 5) Désactive Jekyll
       - name: Disable Jekyll
-        run: touch mvcluster/docs/build/html/.nojekyll
+        run: |
+          touch mvcluster/docs/build/html/.nojekyll
 
-      # 6. Deploy to GitHub Pages (branch gh-pages)
+      # 6) Deploy sur gh-pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
