--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,3 +1,4 @@
+# .github/workflows/docs.yml
 name: Publish Sphinx docs
 
 on:
@@ -10,34 +11,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Récupérer le code
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      # 2. Installer Python
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      # 3. Installer Sphinx et extensions
-      - name: Install dependencies
+      - name: Install Sphinx & extensions
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
-      # 4. Générer la doc Sphinx
-      - name: Build documentation
+      - name: Build Sphinx docs
         run: sphinx-build -b html docs/source docs/build/html
 
-      # 5. Désactiver Jekyll (pour ne pas interpréter avec Jekyll)
       - name: Disable Jekyll
         run: echo > docs/build/html/.nojekyll
 
-      # 6. Publier sur GitHub Pages (branche gh-pages)
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # Token GitHub
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: docs/build/html
