--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,38 +1,46 @@
 # .github/workflows/docs.yml
+
 name: Publish Sphinx docs
 
+# Ne se déclenche que sur main
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      # 1) Récupère le code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Python
+      # 2) Installe Python
+      - name: Setup Python 3.x
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Install Sphinx & extensions
+      # 3) Installe Sphinx et extensions
+      - name: Install Sphinx dependencies
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
-      - name: Build Sphinx docs
+      # 4) Génère la doc Sphinx
+      - name: Build Sphinx documentation
         run: sphinx-build -b html docs/source docs/build/html
 
+      # 5) Crée .nojekyll pour désactiver Jekyll
       - name: Disable Jekyll
         run: echo > docs/build/html/.nojekyll
 
+      # 6) Déploie sur la branche gh-pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: docs/build/html
+          keep_files: false     # écrase tout sur gh-pages
