--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,15 +26,12 @@ jobs:
       - name: Install Sphinx dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
+          python -m pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
       # 4) Génère la doc Sphinx
       - name: Build Sphinx documentation
         run: sphinx-build -b html docs/source docs/build/html
-
-      # 5) Crée .nojekyll pour désactiver Jekyll
-      - name: Disable Jekyll
-        run: echo > docs/build/html/.nojekyll
+ 
 
       # 6) Déploie sur la branche gh-pages
       - name: Deploy to GitHub Pages
