--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,3 @@
-# .github/workflows/docs.yml
 name: Publish Sphinx docs
 
 on:
@@ -10,35 +9,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) Checkout the repository
+      # 1) Récupère le code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2) Set up Python
-      - name: Set up Python 3.x
+      # 2) Installe Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      # 3) Install Sphinx and extensions
-      - name: Install dependencies
+      # 3) Installe Sphinx & extensions
+      - name: Install Sphinx dependencies
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
-      # 4) Build the Sphinx documentation
-      - name: Build documentation
-        run: sphinx-build -b html docs/source docs/build/html
+      # 4) Génère la doc Sphinx
+      - name: Build Sphinx documentation
+        run: sphinx-build -b html mvcluster/docs/source mvcluster/docs/build/html
 
-      # 5) Disable Jekyll (so GitHub Pages will serve raw HTML)
+      # 5) Désactive Jekyll
       - name: Disable Jekyll
-        run: echo > docs/build/html/.nojekyll
+        run: echo > mvcluster/docs/build/html/.nojekyll
 
-      # 6) Deploy to GitHub Pages (branch gh-pages)
+      # 6) Déploie sur GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: docs/build/html
-          keep_files: false  # overwrite everything on gh-pages
+          publish_dir: mvcluster/docs/build/html
+          keep_files: false
