--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,39 +5,33 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) Récupère le code
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2) Installe Python
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      # 3) Installe Sphinx & extensions
-      - name: Install Sphinx dependencies
+      - name: Install Sphinx and extensions
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
-      # 4) Génère la doc Sphinx
       - name: Build Sphinx documentation
-        run: sphinx-build -b html mvcluster/docs/source mvcluster/docs/build/html
+        run: sphinx-build -b html mvcluster/mvcluster/docs/source mvcluster/mvcluster/docs/build/html
 
-      # 5) Désactive Jekyll
       - name: Disable Jekyll
-        run: echo > mvcluster/docs/build/html/.nojekyll
+        run: echo > mvcluster/mvcluster/docs/build/html/.nojekyll
 
-      # 6) Déploie sur GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: mvcluster/docs/build/html
+          publish_dir: mvcluster/mvcluster/docs/build/html
           keep_files: false
