Add GitHub Actions workflow to publish Sphinx docs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,74 +4,81 @@ on:
   push:
     branches: [ main ]
 
+# 0. Permissions nécessaires pour upload + deploy
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: read        # pour checkout
+  pages: write          # pour déployer sur gh-pages
+  id-token: write       # pour actions/deploy-pages
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    # 1. checkout
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Locate docs/source
-        id: find_source
-        run: |
-          echo "🔍 Searching for docs/source in possible locations..."
-          POSSIBLE=(. mvcluster mvcluster/mvcluster)
-          FOUND=
-          for D in "${POSSIBLE[@]}"; do
-            if [ -d "$D/docs/source" ]; then
-              echo "✅ Found docs at $D/docs/source"
-              echo "SOURCE_ROOT=$D" >> "$GITHUB_OUTPUT"
-              FOUND=1
-              break
-            fi
-          done
-          if [ -z "$FOUND" ]; then
-            echo "❌ Error: docs/source not found in any of: ${POSSIBLE[*]}"
-            exit 1
+    # 2. trouver le dossier source de la doc
+    - name: Locate docs/source
+      id: find_source
+      run: |
+        echo "🔍 Searching for docs/source in possible locations..."
+        POSSIBLE=(. mvcluster mvcluster/mvcluster)
+        for D in "${POSSIBLE[@]}"; do
+          if [ -d "$D/docs/source" ]; then
+            echo "✅ Found docs at $D/docs/source"
+            echo "SOURCE_ROOT=$D" >> "$GITHUB_OUTPUT"
+            break
           fi
+        done
+        if [ -z "${{ steps.find_source.outputs.SOURCE_ROOT }}" ]; then
+          echo "❌ Error: docs/source not found in any of: ${POSSIBLE[*]}"
+          exit 1
+        fi
 
-      - name: Setup Python & install Sphinx
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-      - run: |
-          python -m pip install --upgrade pip
-          pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
+    # 3. setup Python + installer Sphinx
+    - name: Setup Python & install Sphinx
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
+    - run: |
+        python -m pip install --upgrade pip
+        pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
-      - name: Prepare _static directory
-        working-directory: ${{ steps.find_source.outputs.SOURCE_ROOT }}
-        run: |
-          mkdir -p docs/source/_static
-          echo "✅ Ensured docs/source/_static exists"
+    # 4. build la doc
+    - name: Build Sphinx documentation
+      working-directory: ${{ steps.find_source.outputs.SOURCE_ROOT }}
+      run: |
+        echo "ℹ️ Building from $PWD/docs/source → docs/build/html"
+        ls -l docs
+        sphinx-build -b html docs/source docs/build/html
 
-      - name: Build Sphinx documentation
-        working-directory: ${{ steps.find_source.outputs.SOURCE_ROOT }}
-        run: |
-          echo "ℹ️ Building docs from $PWD/docs/source → docs/build/html"
-          sphinx-build -b html docs/source docs/build/html
+    # 5. vérifier que le build a bien produit HTML
+    - name: Locate built HTML
+      id: find_build
+      run: |
+        BUILD_DIR="${{ steps.find_source.outputs.SOURCE_ROOT }}/docs/build/html"
+        if [ -d "$BUILD_DIR" ]; then
+          echo "✅ Found built HTML at $BUILD_DIR"
+          echo "BUILD_DIR=$BUILD_DIR" >> "$GITHUB_OUTPUT"
+        else
+          echo "❌ Error: build/html not found at $BUILD_DIR"
+          exit 1
+        fi
 
-      - name: Verify build output
-        id: find_build
-        run: |
-          BUILD="${{ steps.find_source.outputs.SOURCE_ROOT }}/docs/build/html"
-          if [ -d "$BUILD" ]; then
-            echo "✅ Build dir found: $BUILD"
-            echo "BUILD_DIR=$BUILD" >> "$GITHUB_OUTPUT"
-          else
-            echo "❌ Build dir missing: $BUILD"
-            exit 1
-          fi
+    # 6. upload de l’artifact Pages
+    - name: Upload Pages artifact
+      uses: actions/upload-pages-artifact@v1
+      with:
+        path: ${{ steps.find_build.outputs.BUILD_DIR }}
 
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: ${{ steps.find_build.outputs.BUILD_DIR }}
+  deploy:
+    # 7. déploiement, en récupérant l’artifact du job build
+    needs: build
+    runs-on: ubuntu-latest
+    environment: github-pages
 
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
+    steps:
+    - name: Deploy to GitHub Pages
+      uses: actions/deploy-pages@v1
