--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,84 +1,43 @@
+# .github/workflows/docs.yml
 name: Publish Sphinx docs
 
 on:
   push:
     branches: [ main ]
 
-# 0. Permissions nécessaires pour upload + deploy
-permissions:
-  contents: read        # pour checkout
-  pages: write          # pour déployer sur gh-pages
-  id-token: write       # pour actions/deploy-pages
-
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. checkout
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      # 1. Checkout your repository
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    # 2. trouver le dossier source de la doc
-    - name: Locate docs/source
-      id: find_source
-      run: |
-        echo "🔍 Searching for docs/source in possible locations..."
-        POSSIBLE=(. mvcluster mvcluster/mvcluster)
-        for D in "${POSSIBLE[@]}"; do
-          if [ -d "$D/docs/source" ]; then
-            echo "✅ Found docs at $D/docs/source"
-            echo "SOURCE_ROOT=$D" >> "$GITHUB_OUTPUT"
-            break
-          fi
-        done
-        if [ -z "${{ steps.find_source.outputs.SOURCE_ROOT }}" ]; then
-          echo "❌ Error: docs/source not found in any of: ${POSSIBLE[*]}"
-          exit 1
-        fi
+      # 2. Setup Python
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    # 3. setup Python + installer Sphinx
-    - name: Setup Python & install Sphinx
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
-    - run: |
-        python -m pip install --upgrade pip
-        pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
+      # 3. Install Sphinx and extensions
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
-    # 4. build la doc
-    - name: Build Sphinx documentation
-      working-directory: ${{ steps.find_source.outputs.SOURCE_ROOT }}
-      run: |
-        echo "ℹ️ Building from $PWD/docs/source → docs/build/html"
-        ls -l docs
-        sphinx-build -b html docs/source docs/build/html
+      # 4. Build the Sphinx docs from mvcluster/docs/source → mvcluster/docs/build/html
+      - name: Build Sphinx documentation
+        run: sphinx-build -b html mvcluster/docs/source mvcluster/docs/build/html
 
-    # 5. vérifier que le build a bien produit HTML
-    - name: Locate built HTML
-      id: find_build
-      run: |
-        BUILD_DIR="${{ steps.find_source.outputs.SOURCE_ROOT }}/docs/build/html"
-        if [ -d "$BUILD_DIR" ]; then
-          echo "✅ Found built HTML at $BUILD_DIR"
-          echo "BUILD_DIR=$BUILD_DIR" >> "$GITHUB_OUTPUT"
-        else
-          echo "❌ Error: build/html not found at $BUILD_DIR"
-          exit 1
-        fi
+      # 5. Disable Jekyll so GitHub Pages serves raw HTML
+      - name: Disable Jekyll
+        run: touch mvcluster/docs/build/html/.nojekyll
 
-    # 6. upload de l’artifact Pages
-    - name: Upload Pages artifact
-      uses: actions/upload-pages-artifact@v1
-      with:
-        path: ${{ steps.find_build.outputs.BUILD_DIR }}
-
-  deploy:
-    # 7. déploiement, en récupérant l’artifact du job build
-    needs: build
-    runs-on: ubuntu-latest
-    environment: github-pages
-
-    steps:
-    - name: Deploy to GitHub Pages
-      uses: actions/deploy-pages@v1
+      # 6. Deploy to GitHub Pages (branch gh-pages)
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: mvcluster/docs/build/html
