--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,3 @@
-# .github/workflows/docs.yml
 name: Publish Sphinx docs
 
 on:
@@ -10,34 +9,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout your repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Setup Python
+      - name: Dump workspace
+        run: ls -R .
+
       - name: Set up Python 3.x
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      # 3. Install Sphinx and extensions
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints
 
-      # 4. Build the Sphinx docs from mvcluster/docs/source → mvcluster/docs/build/html
       - name: Build Sphinx documentation
-        run: sphinx-build -b html mvcluster/docs/source mvcluster/docs/build/html
+        # Either adjust the path:
+        run: sphinx-build -b html mvcluster/mvcluster/docs/source mvcluster/mvcluster/docs/build/html
+        # …or run in the subfolder:
+        # working-directory: mvcluster
+        # run: sphinx-build -b html docs/source docs/build/html
 
-      # 5. Disable Jekyll so GitHub Pages serves raw HTML
       - name: Disable Jekyll
-        run: touch mvcluster/docs/build/html/.nojekyll
+        run: touch mvcluster/mvcluster/docs/build/html/.nojekyll
 
-      # 6. Deploy to GitHub Pages (branch gh-pages)
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: mvcluster/docs/build/html
+          publish_dir: mvcluster/mvcluster/docs/build/html
